--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -34,3 +34,8 @@
     width: 3.5rem;
   }
 }
+@media (max-width: 512px) {
+  .header{
+    border-radius: 0;
+  }
+}
