--- a/src/app/components/map-viewer/map-viewer.component.css
+++ b/src/app/components/map-viewer/map-viewer.component.css
@@ -9,6 +9,6 @@
 }
 @media (min-width: 992px) {
   .card {
-    height: 65vh;
+    height: 55vh;
   }
 }
